Fix collapse

--- a/wp-content/themes/gazprom-cps/layout/style/partials/_app-collapse.scss
+++ b/wp-content/themes/gazprom-cps/layout/style/partials/_app-collapse.scss
@@ -1,6 +1,6 @@
 @import "../variables";
 
-:where(.app-collapse) {
+.app-collapse {
   background: var(--bg-soft);
 
   &__summary {
